init(full-stack): implement login

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,10 +24,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/material-theme.scss",
-              "src/styles.css"
-            ]
+            "styles": ["src/material-theme.scss", "src/styles.scss"]
           },
           "configurations": {
             "production": {
