cleanup(frontend): remove unnecessary styles

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,7 +24,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/material-theme.scss", "src/styles.scss"]
+            "styles": ["src/material-theme.scss", "src/styles.css"]
           },
           "configurations": {
             "production": {
