--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,13 @@
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "clipboard": "^2.0.11",
     "daisyui": "^5.5.14",
+    "dompurify": "^3.3.1",
+    "marked": "^17.0.1",
+    "ngx-markdown": "^21.0.1",
     "postcss": "^8.5.6",
+    "prismjs": "^1.30.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.18",
     "tslib": "^2.3.0"
@@ -43,8 +48,13 @@
     "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
     "@angular/material": "^21.1.0",
+    "@types/prismjs": "^1.26.5",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
+  },
+  "overrides": {
+    "lodash-es": "^4.17.21",
+    "undici": "^7.18.2"
   }
 }
