feat(frontend): refactor post editing and listing components, implement new post structure and loading states and improve local caching

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "emitDecoratorMetadata": true,
     "lib": ["es2024", "DOM"],
     "strict": true,
     "noImplicitOverride": true,
